--- a/main.html
+++ b/main.html
@@ -125,7 +125,7 @@
 <body>
 
     <header>
-        <img src="img_1/WhatsApp_Image_2025-12-19_at_02.20.07_(3).jpeg" alt="New Culture Studios" class="logo">
+        <img src="img_1/WhatsApp Image 2025-12-19 at 02.20.07 (3).jpeg" alt="New Culture Studios" class="logo">
         <nav>
             <a href="#artwork">Artwork</a>
             <a href="#postcards">Postcards</a>
