--- a/main.html
+++ b/main.html
@@ -139,7 +139,7 @@
             <h1>Vernacular</h1>
             <h2>The Natural Language of Design</h2>
             <div class="hero-sub">
-                “Vernacular is the natural language called design — the heartbeat of an authentic African modernity.”
+                “Vernacular is the natural language called design the heartbeat of an authentic African modernity.”
             </div>
             <a href="#artwork" class="btn btn-green">View the Work</a>
             <p style="font-size: 0.7rem; margin-top: 15px; text-transform: uppercase;">Scan the postcard → or use the QR on the framed piece.</p>
@@ -163,7 +163,7 @@
 
     <section id="postcards" style="background: #141122;">
         <h3 style="text-align: center;">Interpreting the Cards</h3>
-        <p style="text-align: center; max-width: 600px; margin: 0 auto;">“Small cards, large ideas. Each A5 abstract is a visual note — an interpretation of a part of the vernacular.”</p>
+        <p style="text-align: center; max-width: 600px; margin: 0 auto;">“Small cards, large ideas. Each A5 abstract is a visual note an interpretation of a part of the vernacular.”</p>
         
         <div class="postcard-grid">
             <div class="card">
@@ -203,7 +203,7 @@
         <div class="credits-box">
             <h4 style="color: var(--nc-gold); text-transform: uppercase;">Credits & Note on Method</h4>
             <p>Curated & Produced by <strong>The Legacy Initiative</strong> In partnership with <strong>Arc Bofu (New Culture Studio)</strong></p>
-            <p>Project Lead: Divine Chukwubuihem | Artwork: [Sculptor Name] | Postcards: [Illustrator Name] | Voice: Wisdom Onyema | Research: The Legacy Initiative.</p>
+            <p>Project Lead: Divine Chukwubuihem | Artwork: John-Africa Elionai | Postcards: Temioluwa Adesina | Voice: Wisdom Onyema | Research: The Legacy Initiative.</p>
             <p style="font-size: 0.7rem; opacity: 0.6; margin-top: 2rem;">The Legacy Initiative holds the project copyright. Arc Bofu is granted non-exclusive display rights for the Phase-1 exhibition.</p>
         </div>
     </section>
