Updated the new web-page

--- a/main_3.html
+++ b/main_3.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <title>Demas Nwoko @ 90 - The Story</title>
+        <title>Demas Nwoko @ 90</title>
         <meta name="description" content="An interactive reflection by The Legacy Initiative on Demas Nwoko's conviction that vernacular is the natural language of design.">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Playfair+Display:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="src/main_3.css">
     </head>
     <body>
         <header>
@@ -21,11 +22,24 @@
 
         <section class="hero">
             <!-- Intro Vernacular - Introduction Page - Page 2 -->
-
+            <img src="img_1/Landing_Image_1.png" alt="Vernacular Design" class="hero-image">
+            <div class="hero-content">
+                <h1>Vernacular</h1>
+                <h2>The Natural Language of Design</h2>
+            </div>
         </section>
 
-        <section>
+        <section class="story">
             <!-- The Story - Main Content Page - Page 3 -->
+             <div>
+                <h1>Vernacular</h1>
+                <h2>The Natural Language of Design</h2>
+                <p>Demas Nwoko's vision of vernacular design is a call to reframe the narrative of African modernity. His work challenges the dominance of Western architectural and artistic paradigms, proposing instead a design language rooted in local traditions, materials, and cultural expressions.</p>
+                <p>This project explores how vernacular design can be a powerful tool for cultural identity and social transformation. It highlights the importance of understanding and valuing indigenous knowledge systems in shaping contemporary African aesthetics.</p>
+                <div class="story-sub">
+                    "Vernacular is the natural language called design the heartbeat of an authentic African modernity." says Demas Nwoko, the Nigerian architect, artist, and cultural icon.
+                </div>
+             </div>
         </section>
 
         <section>
