Corrected navigation link in index.html to point to main_2.html for the Gallery section.

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <a href="#postcards">Postcards</a>
             <a href="#story">The Story</a>
             <a href="#credits">Credits</a>
-            <a href="main_2.html#gallery">Gallery</a>
+            <a href="main_2.html">Gallery</a>
         </nav>
     </header>
 
