--- a/index.html
+++ b/index.html
@@ -148,12 +148,11 @@
         }
 
         footer.site-footer .footer-inner {
-            max-width: 980px;
+            max-width: auto;
             margin: 0 auto;
             line-height: 1.4;
             word-break: break-word;
             white-space: normal;
-            text-align: left;
         }
 
     </style>
