--- a/index.html
+++ b/index.html
@@ -109,16 +109,15 @@
 
         .bg-fixed {
             position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             z-index: -1;
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
             filter: brightness(40%);
             transition: transform 0.1s linear;
+            animation: mymove 2ms timing-function 1ms 0 direction fill-mode;
         }
 
         .bg-fixed.bg-contain {
@@ -126,7 +125,7 @@
             background-position: center;
             background-repeat: no-repeat;
             filter: 0.1rem;
-            height: auto;
+            height: 100vh;
             max-width: 100%;
         }
 
@@ -378,7 +377,7 @@
             </section>
 
             <section class="section-container reveal-target">
-                <div class="bg-fixed" style="background-image: url('img_1/Garden.jpeg');"></div>
+                <!--<div class="bg-fixed" style="background-image: url('img_1/Garden.jpeg');"></div>-->
                 <div class="content-wrap">
                     <h1>The Art Piece</h1>
                     <p>John saw Demas Nwoko's story and saw a man emerging from a path rich with wisdom, rich with identity.</p>
@@ -388,7 +387,7 @@
             </section>
 
             <section class="section-container reveal-target">
-                <div class="bg-fixed" style="background-image: url('img_1/Garden.jpeg');"></div>
+                <!--<div class="bg-fixed" style="background-image: url('img_1/Garden.jpeg');"></div>-->
                 <div class="content-wrap">
                     <h1>The Art Piece</h1>
                     <p>This piece does not attempt to portray Demas Nwoko as a figure.</p>
@@ -401,7 +400,7 @@
             </section>
 
             <section class="section-container reveal-target">
-                <div class="bg-fixed" style="background-image: url('img_1/Landing_Image_1.png');"></div>
+                <!--<div class="bg-fixed" style="background-image: url('img_1/Landing_Image_1.png');"></div>-->
                 <div class="content-wrap">
                     <h1>Conclusion</h1>
                     <p>This project began as a gift.<br>But it quickly became a question.</p>
@@ -415,7 +414,7 @@
             </section>
 
             <section class="section-container reveal-target">
-                <div class="bg-fixed" style="background-image: url('img_1/Garden.jpeg');"></div>
+                <!--<div class="bg-fixed" style="background-image: url('img_1/Garden.jpeg');"></div>-->
                 <div class="content-wrap">
                     <h1>This Is Not an Ending</h1>
                     <p>To say vernacular is the natural language of design is not a romantic claim.<br>It is a <strong>practical</strong> one.</p>
